--- a/sass/nathers-2016.styles.scss
+++ b/sass/nathers-2016.styles.scss
@@ -17,3 +17,5 @@
 @import "components/footer";
 @import "components/main";
 @import "components/page";
+@import "components/home";
+@import "components/content";
