--- a/css/nathers-2016.styles.css
+++ b/css/nathers-2016.styles.css
@@ -211,23 +211,35 @@ body {
     margin-bottom: 1rem;
     margin-left: auto; }
     /* line 9, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_header.scss */
+    .l-header .top-link ul {
+      padding: 0;
+      margin: 0; }
+      /* line 12, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_header.scss */
+      .l-header .top-link ul li {
+        list-style: none;
+        display: inline-block;
+        color: #4080b0; }
+        /* line 16, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_header.scss */
+        .l-header .top-link ul li.first:after {
+          content: "|"; }
+    /* line 21, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_header.scss */
     .l-header .top-link a {
       color: #4080b0;
       text-decoration: none; }
 
-/* line 18, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_header.scss */
+/* line 30, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_header.scss */
 .l-branding .logo {
   width: 18.75rem;
   margin-right: auto;
   margin-bottom: 2rem;
   margin-left: auto; }
-  /* line 21, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_header.scss */
+  /* line 33, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_header.scss */
   .l-branding .logo a {
     border-bottom: none;
     display: block;
     line-height: 0; }
 
-/* line 27, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_header.scss */
+/* line 39, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_header.scss */
 .l-branding .l-utilities {
   border-top-left-radius: 0.2rem;
   border-top-right-radius: 0.2rem;
@@ -256,14 +268,14 @@ body {
     display: table; }
 
 @media (min-width: 768px) {
-  /* line 43, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_header.scss */
+  /* line 55, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_header.scss */
   .l-branding .l-utilities {
     border-bottom-width: 6px;
     display: block;
     padding: 0 0.5rem; } }
 
 @media (min-width: 1200px) {
-  /* line 52, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_header.scss */
+  /* line 64, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_header.scss */
   .l-branding {
     display: -webkit-box;
     display: -moz-box;
@@ -281,7 +293,7 @@ body {
     -o-align-items: flex-end;
     align-items: flex-end;
     -ms-flex-align: end; }
-    /* line 55, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_header.scss */
+    /* line 67, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_header.scss */
     .l-branding .logo {
       -webkit-box-flex: 0;
       -moz-box-flex: 0;
@@ -292,7 +304,7 @@ body {
       flex: 0;
       margin: 0 0.6875rem 0 0;
       min-width: 9.375rem; }
-    /* line 60, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_header.scss */
+    /* line 72, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_header.scss */
     .l-branding .l-utilities {
       border-top-left-radius: 0;
       border-top-right-radius: 0;
@@ -734,7 +746,67 @@ body {
       border-top-right-radius: 0.125rem;
       border-bottom-left-radius: 0.125rem;
       border-bottom-right-radius: 0.125rem;
-      padding: 2rem; } }
+      padding: 2rem; }
+    /* line 21, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_home.scss */
+    .front .right-column .pane-links-links-home-page h2 {
+      margin-top: 1.5rem;
+      padding-top: 1.05rem;
+      padding-bottom: 0rem;
+      margin-bottom: 0.675rem; }
+    /* line 24, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_home.scss */
+    .front .right-column .pane-links-links-home-page ul {
+      padding: 0;
+      margin: 0;
+      display: -webkit-box;
+      display: -moz-box;
+      display: box;
+      display: -webkit-flex;
+      display: -moz-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-lines: multiple;
+      -moz-box-lines: multiple;
+      box-lines: multiple;
+      -webkit-flex-wrap: wrap;
+      -moz-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap; }
+      /* line 29, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_home.scss */
+      .front .right-column .pane-links-links-home-page ul li {
+        list-style: none;
+        margin-right: 0.5rem;
+        margin-bottom: 0.5rem; }
+    /* line 34, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_home.scss */
+    .front .right-column .pane-links-links-home-page a {
+      border: 1px solid #255b83;
+      border-radius: 3px;
+      box-shadow: inset 0 1px 0 0 #79a4c4;
+      color: white;
+      display: inline-block;
+      font-size: inherit;
+      font-weight: bold;
+      background-color: #4080b0;
+      background-image: -webkit-linear-gradient(#4080b0, #29638f);
+      background-image: linear-gradient(#4080b0, #29638f);
+      padding: 7px 18px;
+      text-decoration: none;
+      text-shadow: 0 1px 0 #1c5178;
+      background-clip: padding-box; }
+      /* line 137, /Applications/CodeKit.app/Contents/Resources/engines/bourbon/_bourbon-deprecated-upcoming.scss */
+      .front .right-column .pane-links-links-home-page a:hover:not(:disabled) {
+        background-color: #3d7299;
+        background-image: -webkit-linear-gradient(#3d7299, #265b82);
+        background-image: linear-gradient(#3d7299, #265b82);
+        box-shadow: inset 0 1px 0 0 #548cb5;
+        cursor: pointer; }
+      /* line 154, /Applications/CodeKit.app/Contents/Resources/engines/bourbon/_bourbon-deprecated-upcoming.scss */
+      .front .right-column .pane-links-links-home-page a:active:not(:disabled), .front .right-column .pane-links-links-home-page a:focus:not(:disabled) {
+        border: 1px solid #255b83;
+        box-shadow: inset 0 0 8px 4px #245376, inset 0 0 8px 4px #245376; }
+      /* line 59, /Applications/CodeKit.app/Contents/Resources/engines/bourbon/_bourbon-deprecated-upcoming.scss */
+      .front .right-column .pane-links-links-home-page a:disabled {
+        cursor: not-allowed;
+        opacity: 0.5; } }
 
 /* line 20, /Applications/CodeKit.app/Contents/Resources/engines/bourbon/addons/_clearfix.scss */
 .l-content::after {
