--- a/sass/nathers-2016.styles.scss
+++ b/sass/nathers-2016.styles.scss
@@ -10,6 +10,7 @@
 @import "abstractions/mixins";
 
 @import "base/typography";
+@import "base/media";
 
 @import "components/header";
 @import "components/menu";
