--- a/css/nathers-2016.styles.css
+++ b/css/nathers-2016.styles.css
@@ -198,6 +198,27 @@ body {
     color: #c84d54;
     border-bottom: 1px solid #da888d; }
 
+/* line 132, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
+figure figcaption,
+figure.image figcaption {
+  font-family: "montserrat regular", arial, helvetica, sans-serif;
+  color: #7f7f7f;
+  padding: 0.5rem 0 0;
+  font-size: 0.8rem;
+  line-height: 1.5rem; }
+
+/* line 3, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_media.scss */
+figure,
+figure.image {
+  width: 100%;
+  height: auto;
+  background: none; }
+  /* line 8, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_media.scss */
+  figure img,
+  figure.image img {
+    width: 100%;
+    height: auto; }
+
 /* line 3, /Users/Jesse/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/components/_header.scss */
 .l-header {
   padding-top: 1rem;
