--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -90,8 +90,7 @@ body {
 		padding-left: 1.4em;
 	}
 	ul li {
-		color: #c84d54;
-		list-style: square;
+		list-style-image: url('../images/bullet.png');
 		padding-left: 0.2em;
 	}
 	ol li {
