Lots of typography updates.

--- a/sass/base/_media.scss
+++ b/sass/base/_media.scss
@@ -5,6 +5,9 @@ figure.image {
 	width: 100%;
 	height: auto;
 	background: none;
+	@include margin(0);
+	@include padding(0 0 rem(16px) 0);
+	line-height: rem(16px);
 	img {
 		width: 100%;
 		height: auto;
