--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -39,12 +39,14 @@
 	.l-utilities {
 		@include border-top-radius(0.2rem);
 		@include clearfix;
-		@include margin(null null 1.5rem null);
 		@include padding(1rem 1rem 1rem 0.5rem);
 		@include display(flex);
 		@include flex-wrap(nowrap);
 		background: color(grey, three-quarter);
 		border-bottom: 9px solid color(red);
+	}
+	.site-name {
+		display: none;
 	}
 }
 
