--- a/sass/nathers-2016.styles.scss
+++ b/sass/nathers-2016.styles.scss
@@ -11,6 +11,7 @@
 
 @import "base/typography";
 @import "base/media";
+@import "base/tables";
 
 @import "components/header";
 @import "components/menu";
@@ -20,3 +21,4 @@
 @import "components/page";
 @import "components/home";
 @import "components/content";
+@import "components/blue-box";
