--- a/css/nathers-2016.styles.css
+++ b/css/nathers-2016.styles.css
@@ -83,7 +83,10 @@ body {
     padding: 2rem 0 0.9rem;
     font-family: "montserrat light", arial, helvetica, sans-serif;
     border-top: 1px dotted #00703c; }
-  /* line 46, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
+    /* line 45, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
+    .front .l-page h2 {
+      border: none; }
+  /* line 49, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
   .l-page h3 {
     font-size: 1.4rem;
     line-height: 3rem;
@@ -91,7 +94,7 @@ body {
     margin: 0;
     line-height: 1.68rem;
     font-family: "montserrat regular", arial, helvetica, sans-serif; }
-  /* line 53, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
+  /* line 56, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
   .l-page h4 {
     font-size: 1.1rem;
     line-height: 1.5rem;
@@ -99,7 +102,7 @@ body {
     padding: 0.55rem 0 0.33rem;
     font-family: "montserrat semibold", arial, helvetica, sans-serif;
     line-height: 1.43rem; }
-  /* line 60, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
+  /* line 63, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
   .l-page h5 {
     font-size: 0.85rem;
     line-height: 1.5rem;
@@ -109,7 +112,7 @@ body {
     line-height: 1.2325rem;
     text-transform: uppercase;
     letter-spacing: 0.085rem; }
-  /* line 69, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
+  /* line 72, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
   .l-page h6 {
     font-size: 0.85rem;
     line-height: 1.5rem;
@@ -119,69 +122,69 @@ body {
     line-height: 1.19rem;
     text-transform: uppercase;
     letter-spacing: 0.085rem; }
-  /* line 78, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
+  /* line 81, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
   .l-page em {
     font-style: italic; }
-  /* line 81, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
+  /* line 84, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
   .l-page strong {
     font-family: "montserrat semibold", arial, helvetica, sans-serif; }
-  /* line 84, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
+  /* line 87, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
   .l-page blockquote {
     padding-right: 1.4em;
     padding-left: 1.4em; }
-  /* line 89, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
+  /* line 92, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
   .l-page p, .l-page ul, .l-page ol {
     margin: 0;
     padding: 0 0 0.9rem;
     font-family: "montserrat light", arial, helvetica, sans-serif;
     color: #404040;
     line-height: 1.6rem; }
-  /* line 96, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
+  /* line 99, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
   .l-page ul {
     padding: 0 0 0.9rem 1.2rem; }
-  /* line 99, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
+  /* line 102, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
   .l-page ol {
     padding: 0 0 0.9rem 1.4rem;
     margin: 0; }
-  /* line 103, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
+  /* line 106, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
   .l-page ul li {
     list-style-image: url("../images/bullet.png");
     padding-left: 0.2rem; }
-  /* line 107, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
+  /* line 110, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
   .l-page ol li {
     list-style: decimal; }
-  /* line 111, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
+  /* line 114, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
   .l-page p + ul,
   .l-page p + ol {
     margin-top: -0.9rem; }
-  /* line 120, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
+  /* line 123, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
   .l-page blockquote {
     line-height: 1rem;
     padding: 0 1.4rem;
     margin: 0; }
 
-/* line 127, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
+/* line 130, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
 .l-page .l-main a, .l-header .top-link a, .l-footer a {
   -webkit-transition: all 0.1s ease-in;
   -moz-transition: all 0.1s ease-in;
   transition: all 0.1s ease-in; }
-  /* line 129, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
+  /* line 132, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
   .l-page .l-main a:link, .l-header .top-link a:link, .l-footer a:link, .l-page .l-main a:visited, .l-header .top-link a:visited, .l-footer a:visited {
     padding-bottom: 0.0625rem;
     font-family: "montserrat regular", arial, helvetica, sans-serif;
     border-bottom: 1px dotted #dedede;
     color: #4080b0;
     text-decoration: none; }
-  /* line 137, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
+  /* line 140, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
   .l-page .l-main a:hover, .l-header .top-link a:hover, .l-footer a:hover {
     color: #005696;
     border-bottom: 1px solid #4080b0; }
-  /* line 141, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
+  /* line 144, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
   .l-page .l-main a:active, .l-header .top-link a:active, .l-footer a:active {
     color: #c84d54;
     border-bottom-color: #da888d; }
 
-/* line 147, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
+/* line 150, /Users/jesseboyd/Sites/devdesktop/nathers/docroot/sites/all/themes/custom/nathers_2016/sass/base/_typography.scss */
 figure figcaption,
 figure.image figcaption {
   font-size: 0.8rem;
